# blipply-assistant

./: .gitignore  ARCHITECTURE.md  BUILD.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT_SUMMARY.md  README.md  config.example.toml  flake.nix
scripts/: download-models.sh
src/: config.rs  first_run.rs  hotkeys.rs  main.rs  ollama.rs  profiles.rs  state.rs
src/audio/: mod.rs  stt.rs  tts.rs  vad.rs
src/ui/: mod.rs  widgets.rs  window.rs
