[package]
name = "blipply-assistant"
version = "0.1.0"
edition = "2021"
authors = ["DeMoD LLC"]
license = "MIT"
description = "AI-powered desktop assistant with voice interaction for NixOS"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
pin-project = "1.1"
async-stream = "0.3"

# Ollama client
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Config management
toml = "0.8"
dirs = "5.0"

# Audio - STT (whisper.cpp bindings)
whisper-rs = "0.11"

# Audio - TTS (ONNX runtime for Piper models)
ort = { version = "2.0", features = ["half", "download-binaries"] }
ndarray = "0.16"

# Audio I/O
cpal = "0.15"
rubato = "0.15"
hound = "3.5"

# VAD
webrtc-vad = "0.4"

# GUI
gtk = { version = "0.18", package = "gtk4" }
gtk4-layer-shell = "0.3"
gdk = "0.18"
glib = "0.18"
cairo-rs = "0.18"
pango = "0.18"

# Image handling
image = "0.25"
gif = "0.13"

# Hotkeys
evdev = "0.12"
zbus = { version = "4.4", features = ["tokio"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Concurrency
parking_lot = "0.12"
dashmap = "6.1"

# Utilities
once_cell = "1.19"
bytes = "1.7"
uuid = { version = "1.10", features = ["v4"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
panic = 'abort'

[profile.dev]
opt-level = 1
